# Project-NOVA

./: ARCHITECTURE_STATUS.md  JOURNEY.md  PRODUCT_BACKLOG.md  README.md  nova.py  pyproject.toml  requirements.txt
00_Blueprint/: README.docx  README.md
00_Blueprint/00_Foundation/: NOVA-SPEC-001_Project_Foundation_Specification.docx  NOVA-SPEC-001_Project_Foundation_Specification.md
00_Blueprint/01_Product/: NOVA-SPEC-002_Product_Requirements_Specification.docx  NOVA-SPEC-002_Product_Requirements_Specification.md
00_Blueprint/02_Architecture/: NOVA-ADR-001_Architecture_Decisions.md  NOVA-ARR-001_Architecture_Review_Report.md  NOVA-ARR-002_AI_Core_Review_Report.md  NOVA-ARR-003_Browser_Design_Review.md  NOVA-ARR-004_Vision_Design_Review.md  NOVA-ARR-005_Voice_Design_Review.md  NOVA-ARR-006_Platform_Architecture_Review.md  NOVA-SPEC-003_System_Architecture_Specification.docx  NOVA-SPEC-003_System_Architecture_Specification.md  (+4 more)
00_Blueprint/ADR/: README.md  (+7 more)
01_Source/: demo_browser.py  demo_cognition.py  demo_e2e.py  demo_execution.py  demo_input.py  demo_intents.py  demo_interaction.py  demo_ken.py  demo_keyboard.py  demo_memory.py  demo_screen_capture.py  demo_sdk.py  demo_skills.py  demo_trust.py  demo_world.py  main.py
02_Research/: README.md
03_Experiments/: README.md  read_docx.py
04_Releases/: README.md
06_Tools/: README.md  compile_docs.py
07_Validation/: EVP_Sprint_01_Plan.md  README.md  run_benchmark_test.py  run_qualification.py
NOVA_STANDARD/: Engineering_Commencement.md  HISTORY.md  NOVA_Manifesto.md  README.md  Research_Phase_Closure.md
(+522 files in other folders)
