[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nova"
version = "0.1.0"
description = "Project NOVA Core Kernel"
authors = [{ name = "Praveen", email = "admin@projectnova.ai" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "flake8>=7.0.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["01_Source/tests"]
pythonpath = ["01_Source"]
